syntax = "proto3";

package user;

service UserService {
  rpc Register (CreateUserRequest) returns (CreateUserResponse);
  rpc FindUserByEmail (FindByEmailRequest) returns (FindUserResponse);
  rpc FindUserByEmailFull (FindByEmailRequest) returns (FindUserFullResponse);
  rpc FindMe (FindMeRequest) returns (FindUserResponse);
  rpc FindMeFull (FindMeRequest) returns (FindUserFullResponse);
}

message CreateUserRequest {
  string name = 1;
  string username = 2;
  string email = 3;
  string password = 4;
}

message CreateUserResponse {
  string name = 1;
  string username = 2;
  string email = 3;
  string password = 4;
}

message FindMeRequest{}

message FindByEmailRequest {
  string email = 1;
}

message FindByIdRequest {
  int32 id = 1;
}

message FindUserResponse {
  int32 id = 1;
  string name = 2;
  string username = 3;
  string email = 4;
}

message FindUserFullResponse {
  int32 id = 1;
  string name = 2;
  string username = 3;
  string email = 4;
  repeated Workspace workspaces = 5;
  repeated Board boards_member = 6;
  repeated Card attached_cards = 7;
}

message Workspace {
  int32 id = 1;
  string name = 2;
  string shortname = 3;
  repeated Board boards = 4;
}

message Board {
  int32 id = 1;
  string name = 2;
  string visibility = 3;
}

message Card {
  int32 id = 1;
  string name = 2;
  string description = 3;
}